[package]
name = "delay-queue"
version = "0.2.0"
edition = "2018"
license = "MIT/Apache-2.0"
authors = ["Tiago Cardoso <tbcardoso@outlook.com>"]
description = "A concurrent unbounded blocking queue where each element can only be removed when its delay expires."
repository = "https://github.com/tbcardoso/rust-delay-queue"
readme = "README.md"
keywords = ["concurrency", "delay", "queue", "wait", "schedule"]
categories = ["concurrency"]

[badges]
travis-ci = { repository = "tbcardoso/rust-delay-queue" }
appveyor = { repository = "tbcardoso/rust-delay-queue" }

[dependencies]
chrono = "0.4"
priority-queue = "0.7.0"

[dev-dependencies]
timebomb = "0.1.2"
